<resources>
    <string name="app_name">SpidermanVSVenomGame</string>
    <string name="score">Score:</string>
    <string name="init_score">000</string>
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="nan">NaN</string>
    <string name="spiderman_vs_villain">Spiderman vs. Villain</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="fast_mode">Fast Mode</string>
    <string name="sensor_mode">Sensor Mode</string>
    <string name="start_game">Start Game</string>
    <string name="distance">000</string>
</resources>